--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,5 +1,5 @@
 header {
-	margin-top: 2%;
+	margin-top: 2vh;
 	height: 10%;
 	min-height: 100px;
 	max-height: 200px;
