--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,8 +1,6 @@
 @media screen and (max-width: 500px) {
 	main > svg {
 		min-width: 90% !important;
-		margin-top: 2% !important;
-		margin-bottom: 2% !important;
 	}
 	nav ul li a {
 		border-left: 0.5% solid rgb(60, 60, 60, 0.4) !important; /* Less shadow. */
